# executor-bootstrap

./: .gitignore  AGENTS.md
doc/: robot-executor-zone-manager-design.md  扫地机器人-需求1.txt  扫地机器人-需求2.txt  扫地机器人-需求3.txt  扫地机器人-需求4.txt  扫地机器人-需求5.txt  扫地机器人-需求6-2.txt  扫地机器人-需求6.txt  扫地机器人-需求7.txt  需求3-重构.doc
include/executor/: clean_zone_observer.h  danger_zone_observer.h  position_observer.h  robot_common_type.h  robot_executor.h  zone_manager.h
include/executor/private/: clean_zone_observer.h  danger_zone_observer.h  position_observer.h  zone_manager.h
openspec/changes/archive/2026-04-09-robot-executor-component/: design.md  proposal.md
openspec/changes/archive/2026-04-09-robot-executor-forward-backward/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-robot-executor-forward-backward/specs/robot-executor/: spec.md
openspec/changes/archive/2026-04-11-robot-executor-clean-zone/: proposal.md
openspec/changes/archive/2026-04-11-robot-executor-clean-zone/specs/clean-zone-alert/: spec.md
openspec/changes/archive/2026-04-11-robot-executor-danger-zone/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-13-robot-executor-zone-manager/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-13-robot-executor-zone-manager/specs/zone-manager/: spec.md
openspec/changes/archive/2026-04-19-robot-executor-multi-step-move/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-26-executor-refactor-observers-private/: design.md  proposal.md  tasks.md
openspec/changes/executor-compound-commands/: design.md  proposal.md  tasks.md
openspec/changes/executor-compound-commands/specs/executor-command-sequence/: spec.md
openspec/changes/executor-compound-commands/specs/executor-nested-commands/: spec.md
openspec/changes/executor-compound-commands/specs/executor-repeat-command/: spec.md
openspec/changes/robot-executor-clean-zone/: design.md  tasks.md
openspec/changes/robot-executor-component/: design.md  tasks.md
openspec/changes/robot-executor-component/specs/robot-executor/: spec.md
openspec/changes/robot-executor-danger-zone/: design.md  tasks.md
openspec/changes/robot-executor-danger-zone/specs/danger-zone-alert/: spec.md
openspec/changes/robot-executor-multi-step-move/specs/multi-step-move/: spec.md
openspec/specs/clean-zone-alert/: spec.md
openspec/specs/danger-zone-alert/: spec.md
openspec/specs/robot-executor/: spec.md
openspec/specs/zone-manager/: spec.md
src/: CMakeLists.txt  clean_zone_observer.cpp  danger_zone_observer.cpp  robot_executor.cpp  zone_manager.cpp
test/: CMakeLists.txt  clean-zone_test.cpp  clean_stub.cpp  compound_commands_test.cpp  danger-zone_test.cpp  executor_test.cc  forward-backward_test.cpp  initialize_turning_test.cpp  robot_executor_test.cc  robot_executor_test.cpp  robot_executor_test_1.cpp  robot_executor_test_2.cpp  robot_executor_test_3.cpp  zone_manager_test.cpp
test/log/: log.cc
test/mock/: alert_mock.cpp  alert_mock.h
(+2 files in other folders)
